<resources>
    <string name="app_name">Resto_old</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_into_your_acompt">Log into your acompt</string>
    <string name="welcome_back">Welcome back</string>
    <string name="selected_item">Selected item:</string>
    <string name="discover_new_places">Discover new places</string>
    <string name="top_categories">Top categories</string>
    <string name="show_all">Show all</string>
    <string name="log_in_to_your_account">Log into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name</string>
    <string name="safety_net_api_key">AIzaSyBFxiDvFPom2qm05tzoW0RFjzWIk-XqutA</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="your_email">Your email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="phone_verification">Phone verification</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="didn_t_you_received_any_code">Didn\'t you received any code ?</string>
    <string name="recent_a_new_code">Recent a new code.</string>
    <string name="verify_your_phone">Verify your phone</string>
    <string name="we_have_sent_you_an_sms_with_a_code_to_number">We have sent you an SMS with a code to number</string>
    <string name="or_login_with">Or login with </string>
    <string name="social_network"> Social network</string>
    <string name="next">Next</string>
    <string name="burgers">Burgers</string>
    <string name="popular_this_weeek">Popular this weeek</string>
    <string name="collections_by_fozzi">Collections by Fozzi</string>
    <string name="andy_and_cindi_s_diner">Andy &amp; Cindi\'s diner</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please enter your email address. You will receive a link to create a new password via email</string>
    <string name="pickup_on_your_time_your_order_is_ready_when_you_are">Pickup on your time. Your order is ready when you are.</string>
    <string name="new_try_pickup">New! Try Pickup</string>
    <string name="_22_powlowski_plain">22 powlowski plain</string>
    <string name="featured_items">Featured Items</string>
    <string name="recent_search">Recent search</string>
    <string name="clear_all">clear all</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="you_ll_shortly_receive_an_email_with_a_code_to_setup_an_new_password">You\'ll shortly receive an email with a code to setup an new password</string>
    <string name="your_password_has_been_reset">Your Password has been reset</string>
    <string name="please_allow_to_use_your_location_to_show_nearby_restaurant_on_the_map">Please allow to use your location to show nearby restaurant on the map.</string>
    <string name="_2">2</string>
    <string name="free_delivery">Free delivery</string>
    <string name="boon_lay_ho_huat_fried_prawn_noodle">Boon Lay Ho Huat Fried Prawn Noodle</string>
    <string name="_856_esta_underpass">856 Esta Underpass</string>
    <string name="_4_5">4.5</string>
    <string name="_233_ratings">233 ratings</string>
    <string name="_137k">137k</string>
    <string name="bookmark">Bookmark</string>
    <string name="_346">346</string>
    <string name="order_now">Order now</string>
    <string name="full_menu">Full Menu</string>
    <string name="view_all">View all</string>
    <string name="popular_items">popular items</string>
    <string name="_3">3</string>
    <string name="salads">salads</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="enable_location">Enable Location</string>
    <string name="your_order_is_successfully">Your order is successfully</string>
    <string name="good_food_is_always_cooking_go_ahead_order_some_yummy_items_from_the_menu">Good food is always cooking! Go ahead, order some yummy items from the menu.</string>
    <string name="little_creatures_club_street">Little Creatures - Club Street</string>
    <string name="from_the_french_countryside_to_your_doorstep_paul_was_founded_in_1889_as_a_family_bakery_and_patisserie_savour_a_selection_of_viennoiserie_croissants_etc">From the French countryside, to your doorstep. PAUL was founded in 1889 as a family bakery and patisserie. Savour a selection of viennoiserie (croissants etc.)...</string>
    <string name="photo">Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="cameron_cook">Cameron Cook</string>
    <string name="darrell_bailey_gmail_com">darrell_bailey@gmail.com</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="_16_04_1988">16/04/1988</string>
    <string name="_65_39879_343">+65 39879 343</string>
    <string name="profile">Profile</string>
    <string name="favourite">Favourite</string>
    <string name="my_order">My Order</string>
    <string name="explore">Explore</string>
    <string name="places">Places</string>
    <string name="pizza">Pizza</string>
    <string name="shushi">Shushi</string>
    <string name="fast_food">Fast Food</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="sort_by">SORT BY</string>
    <string name="top_read">TOP READ</string>
    <string name="filters">Filters</string>
    <string name="cost_high_to_low">Cost High to Low</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="filter">FILTER</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="open_now">Open Now</string>
    <string name="price">PRICE</string>
    <string name="alcohol_served">Alcohol Served</string>
    <string name="_0_00">$0.00</string>
    <string name="_200_00">$200.00</string>
    <string name="cost_low_to_high">Cost Low to High</string>
    <string name="checkout">Checkout</string>
    <string name="backup">Backup</string>
    <string name="delivery_adress">DELIVERY ADRESS</string>
    <string name="_928_lehner_junction_apt_047">928 Lehner Junction Apt. 047</string>
    <string name="home_adress">HOME ADRESS</string>
    <string name="address">address</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="pay_with_touch_id">Pay with Touch ID</string>
    <string name="nearest_me">Nearest Me</string>
    <string name="about_us">about us</string>
    <string name="help_center">help center</string>
    <string name="invite_friends">invite friends</string>
    <string name="settings">settings</string>
    <string name="my_promo_code">my promo code</string>
    <string name="reward_credits">Reward credits</string>
    <string name="payment_method">Payment method</string>
    <string name="notifications">Notifications</string>
    <string name="send">Send</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_my_order">My Order</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="home2">Home_2</string>
    <string name="free_android_courses">Free Android courses</string>
    <string name="build_a_complete_mobile_application_with_android_be_part_of_a_new_genration_of_smart_developers">Build a complete mobile application with android. Be part of a new genration of smart developers</string>
    <string name="contact_237_695233625">Contact : +237 695233625</string>
    <string name="twiter_landryfomena1">twiter: @landryfomena1</string>
    <string name="go_to_orders">Go to orders</string>
    <string name="you_can_track_the_delivery_in_the_orders_section">You can track the delivery in the "Orders" section.</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="collection_by_fozy">Collection by Fozzi</string>
    <string name="dream_of_a_house_for_my_loved_one_one_day_by_the_hill_top_of_paradise">Dream of a house for my loved one. One day by the hill top of paradise.</string>
    <string name="add_savings">add restaurant</string>
    <string name="date">date</string>
    <string name="color">color</string>
    <string name="goal_title">"restau name "</string>
    <string name="name">contact name</string>
    <string name="amount">amount</string>
    <string name="description">"add description "</string>
    <string name="contribution">contribution</string>
    <string name="notifications_str">notification</string>
    <string name="save">save</string>
    <string name="theme_colour">Theme Colour</string>
    <string name="delivery_time_debute">Delivery Time Debute</string>
    <string name="prices">Price</string>
    <string name="every">Every</string>
    <string name="week">week</string>
    <string name="tontine">Tontine</string>
    <string name="rich_en_sels_mineraux">rich en sels mineraux</string>
    <string name="important_pour_diminuer_le_poids">important pour diminuer le poids</string>
    <string name="contient_du_fer">contient du fer</string>
    <string name="dietetic_properties">dietetic properties</string>
    <string name="photos">Photos</string>
    <string name="add_to_order">Add to Order</string>
    <string name="menu_name">Menu Name</string>
    <string name="contributors">Contributors</string>
    <string name="days">Days</string>
</resources>