<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createaccount.CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/TitleCreate_Account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/create_an_account"
            android:textColor="@color/Title_color"
            android:textAlignment="center"
            android:textSize="@dimen/dimens_34sp"
            android:layout_marginTop="@dimen/dimens8dp" />
        <EditText
            android:inputType="text"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:background="@drawable/rounded_shape_into_text"
            android:hint="@string/user_name"
            android:paddingHorizontal="@dimen/dimens_20dp"
            android:paddingTop="@dimen/dimens_15dp"
            android:paddingBottom="@dimen/dimens_5dp"
            android:textColorHint="@color/Text_color_sub"
            android:textSize="@dimen/dimens_25sp"
            app:layout_constraintTop_toBottomOf="@id/Sub_Title" />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/username"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_shape_into_text"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            android:textSize="@dimen/dimens_25sp"
            android:paddingHorizontal="@dimen/dimens_20dp"
            android:paddingTop="@dimen/dimens_15dp"
            android:paddingBottom="@dimen/dimens_5dp"
            android:hint="@string/email"
            android:textColorHint="@color/Text_color_sub"/>
        <EditText
            android:inputType="phone"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_shape_into_text"
            android:hint="@string/phone"
            android:paddingHorizontal="@dimen/dimens_20dp"
            android:paddingTop="@dimen/dimens_15dp"
            android:paddingBottom="@dimen/dimens_5dp"
            android:textColorHint="@color/Text_color_sub"
            android:textSize="@dimen/dimens_25sp"
            app:layout_constraintTop_toBottomOf="@id/email" />
        <EditText
            android:inputType="date"
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phone"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_shape_into_text"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            android:textSize="@dimen/dimens_25sp"
            android:paddingHorizontal="@dimen/dimens_20dp"
            android:paddingTop="@dimen/dimens_15dp"
            android:paddingBottom="@dimen/dimens_5dp"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/Text_color_sub"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date_of_birth"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/rounded_shape_into_text"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            android:textSize="@dimen/dimens_25sp"
            android:paddingHorizontal="@dimen/dimens_20dp"
            android:paddingTop="@dimen/dimens_15dp"
            android:paddingBottom="@dimen/dimens_5dp"
            android:hint="@string/password"
            android:textColorHint="@color/Text_color_sub"/>
        <Button
            android:text="@string/sign_up"
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_700"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimens_40dp"
            android:background="@drawable/rounded_shape_into_log" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            android:text="By clicking Sign up you agree the following Term and Condition without reservation"
            android:textColor="@color/Text_Sub_Title"
            android:textAlignment="center"
            android:textSize="@dimen/dimens_16sp"
            android:layout_marginTop="@dimen/dimens8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>