<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimens_20dp">

            <TextView
                android:id="@+id/titleresgistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_30dp"
                android:fontFamily="@font/avenirltstd_black"
                android:text="@string/create_an_account"
                android:textAlignment="center"
                android:textColor="@color/Title_color"
                android:textSize="@dimen/dimens_34sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/registration_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_40sp"
                android:background="@drawable/rounded_shape_input_text"
                android:fontFamily="@font/avenirltstd_book"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:lines="1"
                android:padding="@dimen/dimens_12dp"
                android:singleLine="true"
                android:textSize="@dimen/dimens_17sp"
                app:layout_constraintTop_toBottomOf="@id/titleresgistration" />

            <EditText
                android:id="@+id/registration_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/rounded_shape_input_text"
                android:fontFamily="@font/avenirltstd_book"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="@dimen/dimens_12dp"
                android:singleLine="true"
                android:textSize="@dimen/dimens_17sp"
                app:layout_constraintTop_toBottomOf="@id/registration_username" />

            <EditText
                android:id="@+id/registration_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/rounded_shape_input_text"
                android:fontFamily="@font/avenirltstd_book"
                android:hint="@string/phone"
                android:inputType="phone"
                android:lines="1"
                android:padding="@dimen/dimens_12dp"
                android:singleLine="true"
                android:textSize="@dimen/dimens_17sp"
                app:layout_constraintTop_toBottomOf="@id/registration_Email" />

            <EditText
                android:id="@+id/registration_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/rounded_shape_input_text"
                android:fontFamily="@font/avenirltstd_book"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:lines="1"
                android:padding="@dimen/dimens_12dp"
                android:singleLine="true"
                android:textSize="@dimen/dimens_17sp"
                app:layout_constraintTop_toBottomOf="@id/registration_Phone" />

            <EditText
                android:id="@+id/registration_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:background="@drawable/rounded_shape_input_text"
                android:fontFamily="@font/avenirltstd_book"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="@dimen/dimens_12dp"
                android:singleLine="true"
                android:textSize="@dimen/dimens_17sp"
                app:layout_constraintTop_toBottomOf="@id/registration_date_of_birth" />

            <Button
                android:id="@+id/registration_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_40sp"
                android:background="@drawable/rounded_shape_butom"
                android:fontFamily="@font/avenir_heavy_opentype_bigfontsite"
                android:hint="@string/sign_up"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimens_17sp"
                app:layout_constraintTop_toBottomOf="@id/registration_Password" />

            <TextView
                android:id="@+id/resgistration_endText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_34sp"
                android:fontFamily="@font/avenirltstd_book"
                android:text="@string/by_clicking_sign_up_you_agree_to_the_following_terms_and_conditions_without_reservation"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:paddingVertical="@dimen/dimens_5dp"
                android:textSize="@dimen/dimens_17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>